[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hej"
version = "1.2.0"
description = "hej"
requires-python = ">=3.11"
dependencies = ["click>=8.0,<9", "requests>=2.31,<3", "rich>=13,<14", "prompt-toolkit>=3.0,<4"]

[project.optional-dependencies]
tests = ["pytest", "responses", "pytest-cov", "black"]
docs = ["pdoc"]

[project.scripts]
hej = "hej.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/hej"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
